Source/WebKit2/UIProcess/DrawingAreaProxy.h
@@ -28,6 +28,7 @@
 #define DrawingAreaProxy_h
 
 #include "DrawingAreaInfo.h"
+#include "GenericCallback.h"
 #include "MessageReceiver.h"
 #include <WebCore/FloatRect.h>
 #include <WebCore/IntRect.h>
@@ -84,9 +85,9 @@ public:
     virtual void updateDebugIndicator() { }
     virtual void setShouldShowDebugIndicator(bool) { }
 
-    virtual uint64_t lastVisibleTransactionID() const { ASSERT_NOT_REACHED(); return 0; }
-
     virtual void waitForDidUpdateViewState() { }
+    
+    virtual void dispatchAfterEnsuringDrawing(std::function<void (CallbackBase::Error)>) { ASSERT_NOT_REACHED(); }
 
 protected:
     explicit DrawingAreaProxy(DrawingAreaType, WebPageProxy*);
